docs: Correct GaussClumps authors' names in SC/20.

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -3014,8 +3014,8 @@ Regrid vs resample vs rebin
 \chapter{\xlabel{clumpfind}Clump finding Algorithms}
 \label{app:clumpfind}
 
-\textbf{GaussClumps}\\Based on the algorithm described by Stutski \&
-Gusten (1990, ApJ 356, 513). This algorithm proceeds by fitting a
+\textbf{GaussClumps}\\Based on the algorithm described by Stutzki \&
+G\"{u}sten (1990, ApJ 356, 513). This algorithm proceeds by fitting a
 Gaussian profile to the brightest peak in the data. It then subtracts
 the fit from the data and iterates, fitting a new ellipse to the
 brightest peak in the residuals. This continues until the integrated
