--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -606,7 +606,7 @@ RxA&19.\uarcs7&0.57 & 0.80\\
 
 For the latest and historical calibrations visit
 \htmladdnormallink{ACSIS Beam
-Efficiencies}{http://www.jach.hawaii.edu/JCMT/spectral_line/Standards/beameff_acsis.html}.
+Efficiencies}{http://www.eaobservatory.org/jcmt/instrumentation/heterodyne/calibration}.
 
 \subsection{\xlabel{harp}HARP Frontend}
 
